tests/ui/pub/pub-ident-struct.stderr
error: missing `enum` or `struct` for enum or struct definition
  --> $DIR/pub-ident-struct.rs:1:1
   |
LL | pub S {
   | ^^^^^

error: aborting due to 1 previous error

