tests/ui/pub/pub-ident-struct.rs
pub S {
//~^ ERROR missing `enum` or `struct` for enum or struct definition
}
fn main() {}
